# ByBit_bot

./: .dockerignore  .env.example  .env_2.example  .exemple_env  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  Test_ST_tokens.py  docker-compose.yml  pyproject.toml  requirements.txt  tokens1  tokens2
bot/: TelegramBot.py  TelegramNotifier.py
config/: config.py
core/: bootstrap_logging.py  business_logic.py  create_daily_report.py  main.py  main_docker.py
db/: database.py  db_reader.py  db_writer.py  models.py  repository.py
queues/: __init__.py
services/: bybit_client.py  bybit_client_new.py  candles_ingest.py  candles_ws_test.py  db_writer.py  execution_engine.py  order_executor.py  paprika_bybit_matcher.py  pipeline_events.py  real_order_executor.py  run_daily_00_collect.py  run_live_trading.py  stale_price_checker.py  strategy_engine.py  token_sync.py  token_sync_service.py  ws_candles_service.py
services/test/: market_data.py  market_universe.py  strategy.py  telegram_service.py  trading_engine.py
src/: __init__.py  main.py
src/config/: settings.py
src/db/: __init__.py  repository.py
src/queues/: event_bus.py
src/services/: __init__.py  market_data.py  market_universe.py  strategy.py  telegram_service.py  trading_engine.py
test/: README.md  __init__.py  bybit_client.py  candles_db_qa.ipynb  conftest.py  test_quick.py  test_trading.py  test_trading_integration.py  test_unit.py
trade/: test_trading.py  trade_client.py
